@@ -1,0 +1,15 @@
+Package {
+     name            = "svgcairo",
+     @GHCPKG_USE_AUTOLIBS@
+     import_dirs     = ["@hidir@/svgcairo"],
+     source_dirs     = [],
+     library_dirs    = [@SVGCAIRO_LIBDIR_CQ@],
+     hs_libraries    = ["HSsvgcairo"],
+     extra_libraries = [@SVGCAIRO_LIBS_CQ@],
+     include_dirs    = [@SVGCAIRO_CFLAGS_CQ@],
+     c_includes      = ["svg-cairo.h"],
+     package_deps    = ["haskell98", "glib", "cairo"],
+     extra_ghc_opts  = [],
+     extra_cc_opts   = [],
+     extra_ld_opts   = [@SVGCAIRO_LIBEXTRA_CQ@]
+}
